# Vantadeck

./: .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml  package-lock.json
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
apps/cli/: Cargo.toml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  bridge.test.ts  bridge.ts  data.ts  index.css  main.tsx  styles.css  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: brand.tsx  health-panel.tsx  health-screen.tsx  onboarding.tsx  project-detail.tsx  thumbnail.tsx
apps/desktop/src/lib/: format.ts  local-store.ts
apps/desktop/src/test/: setup.ts
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/detection/: Cargo.toml
crates/domain/src/: lib.rs
crates/health/: Cargo.toml
crates/launcher/: Cargo.toml
crates/launcher/src/: lib.rs
crates/launcher/tests/: command_spec.rs
crates/manifests/: Cargo.toml
crates/projects/: Cargo.toml
crates/projects/src/: lib.rs
crates/projects/tests/: import.rs  project_files.rs
crates/security/tests/: paths.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: sqlite.rs
crates/vcs/: Cargo.toml
crates/vcs/src/: lib.rs
docs/release/: BLOCKERS.md  RC_VALIDATION_2026-06-21.md
release-assets/: NOTES.md  PipelineOS_0.2.2_x64-setup.exe.sig  latest.json
scripts/: generate-latest-json.mjs
