[workspace]
resolver = "3"
members = [
  "apps/cli",
  "apps/desktop/src-tauri",
  "crates/application",
  "crates/detection",
  "crates/domain",
  "crates/health",
  "crates/launcher",
  "crates/manifests",
  "crates/projects",
  "crates/security",
  "crates/storage",
  "crates/vcs",
]

[workspace.package]
version = "0.2.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ojaseminem/Vantadeck"
rust-version = "1.96"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
jsonschema = "0.30.0"
regex = "1.11.1"
schemars = { version = "0.8.22", features = ["chrono"] }
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "migrate"] }
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "0.8.23"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
walkdir = "2.5.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0
