[package]
name = "vantadeck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vantadeck"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tokio.workspace = true
thiserror.workspace = true
vantadeck-application = { path = "../../crates/application", version = "0.2.6" }
vantadeck-domain = { path = "../../crates/domain", version = "0.2.6" }
vantadeck-health = { path = "../../crates/health", version = "0.2.6" }
vantadeck-projects = { path = "../../crates/projects", version = "0.2.6" }
vantadeck-security = { path = "../../crates/security", version = "0.2.6" }
vantadeck-storage = { path = "../../crates/storage", version = "0.2.6" }
vantadeck-vcs = { path = "../../crates/vcs", version = "0.2.6" }

[dev-dependencies]
tempfile.workspace = true
