[package]
name = "vantadeck"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vantadeck"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tokio.workspace = true
thiserror.workspace = true
vantadeck-application = { path = "../../crates/application" }
vantadeck-domain = { path = "../../crates/domain" }
vantadeck-health = { path = "../../crates/health" }
vantadeck-projects = { path = "../../crates/projects" }
vantadeck-security = { path = "../../crates/security" }
vantadeck-storage = { path = "../../crates/storage" }
vantadeck-vcs = { path = "../../crates/vcs" }

[dev-dependencies]
tempfile.workspace = true
