[package]
name = "vantadeck-application"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
thiserror.workspace = true
vantadeck-domain = { path = "../domain", version = "0.2.6" }
vantadeck-detection = { path = "../detection", version = "0.2.6" }
vantadeck-health = { path = "../health", version = "0.2.6" }
vantadeck-launcher = { path = "../launcher", version = "0.2.6" }
vantadeck-manifests = { path = "../manifests", version = "0.2.6" }
vantadeck-projects = { path = "../projects", version = "0.2.6" }
vantadeck-storage = { path = "../storage", version = "0.2.6" }
vantadeck-vcs = { path = "../vcs", version = "0.2.6" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
