[package]
name = "vantadeck-detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
glob = "0.3"
semver.workspace = true
serde_json.workspace = true
vantadeck-domain = { path = "../domain", version = "0.2.6" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
