[package]
name = "vantadeck-health"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
vantadeck-domain = { path = "../domain" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
