[package]
name = "vantadeck-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
semver.workspace = true
thiserror.workspace = true
tokio.workspace = true
vantadeck-domain = { path = "../domain", version = "0.2.6" }
vantadeck-security = { path = "../security", version = "0.2.6" }

[dev-dependencies]
tempfile.workspace = true
