[package]
name = "vantadeck-manifests"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
vantadeck-domain = { path = "../domain" }
vantadeck-security = { path = "../security" }
