[package]
name = "vantadeck-projects"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
toml.workspace = true
thiserror.workspace = true
vantadeck-domain = { path = "../domain", version = "0.2.6" }
vantadeck-security = { path = "../security", version = "0.2.6" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
