[package]
name = "vantadeck-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sqlx.workspace = true
thiserror.workspace = true
vantadeck-domain = { path = "../domain" }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
