[package]
name = "vantadeck-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "vantadeck_desktop_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde.workspace = true
tauri = { version = "=2.11.5", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
vantadeck-application = { path = "../../../crates/application" }
vantadeck-domain = { path = "../../../crates/domain" }
vantadeck-launcher = { path = "../../../crates/launcher" }
vantadeck-manifests = { path = "../../../crates/manifests" }
vantadeck-storage = { path = "../../../crates/storage" }
vantadeck-vcs = { path = "../../../crates/vcs" }
semver.workspace = true
serde_json.workspace = true
base64 = "0.22"
pelite = "0.10"
